[project]
name = "expat"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Strausser", email = "william.e.strausser@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pymysql>=1.1.1",
]

[project.scripts]
expat = "expat.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
