[project]
name = "expat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Strausser", email = "william.e.strausser@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
expat = "expat.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
